hard-gists/5882966/run.log
=== Docker Run Log for 5882966 ===
Started at: Mi 29. Okt 16:09:07 CET 2025

[2025-10-29 16:09:07] START: Running container for 5882966
[2025-10-29 16:09:07] SUCCESS: Container 87d73a16611ff6d89fe2af97037fe1b9dec7c874e74d44f1f1ebeece1c309cd0 started for 5882966
=== Container logs for 5882966 ===
  File "/snippet.py", line 21
    print "Available devices are:"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5882966 ===
[2025-10-29 16:09:10] INFO: Container 87d73a16611ff6d89fe2af97037fe1b9dec7c874e74d44f1f1ebeece1c309cd0 has stopped
